--- a/Starter_Code/Starter_Code.ipynb
+++ b/Starter_Code/Starter_Code.ipynb
@@ -582,18 +582,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'classifications_to_replace' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 38\u001b[0m\n\u001b[0;32m      4\u001b[0m classifcations_to_replace \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39mC7000\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mC1700\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mC4000\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mC5000\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mC1270\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mC2700\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mC2800\u001b[39m\u001b[39m\"\u001b[39m,       \n\u001b[0;32m      5\u001b[0m \u001b[39m\"\u001b[39m\u001b[39mC7100\u001b[39m\u001b[39m\"\u001b[39m ,\u001b[39m\"\u001b[39m\u001b[39mC1300\u001b[39m\u001b[39m\"\u001b[39m  ,\n\u001b[0;32m      6\u001b[0m \u001b[39m\"\u001b[39m\u001b[39mC1280\u001b[39m\u001b[39m\"\u001b[39m,  \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[39m\"\u001b[39m\u001b[39mC1246\u001b[39m\u001b[39m\"\u001b[39m        ,\n\u001b[0;32m     36\u001b[0m \u001b[39m\"\u001b[39m\u001b[39mC3200\u001b[39m\u001b[39m\"\u001b[39m        ]\n\u001b[0;32m     37\u001b[0m \u001b[39m# Replace in dataframe\u001b[39;00m\n\u001b[1;32m---> 38\u001b[0m \u001b[39mfor\u001b[39;00m \u001b[39mcls\u001b[39m \u001b[39min\u001b[39;00m classifications_to_replace:\n\u001b[0;32m     39\u001b[0m     application_df[\u001b[39m'\u001b[39m\u001b[39mCLASSIFICATION\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m application_df[\u001b[39m'\u001b[39m\u001b[39mCLASSIFICATION\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mreplace(\u001b[39mcls\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mOther\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     41\u001b[0m \u001b[39m# Check to make sure binning was successful\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'classifications_to_replace' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C1000    17326\n",
+      "C2000     6074\n",
+      "C1200     4837\n",
+      "C3000     1918\n",
+      "C2100     1883\n",
+      "Name: CLASSIFICATION, dtype: int64\n"
      ]
     }
    ],
@@ -639,7 +640,11 @@
     "    application_df['CLASSIFICATION'] = application_df['CLASSIFICATION'].replace(cls,\"Other\")\n",
     "    \n",
     "# Check to make sure binning was successful\n",
-    "application_df['CLASSIFICATION'].value_counts()"
+    "filtered_value = application_df['CLASSIFICATION'].isin(condition_classification[condition_classification].index)\n",
+    "\n",
+    "value_counts_with_condition = application_df.loc[filtered_value, 'CLASSIFICATION'].value_counts()\n",
+    " \n",
+    "print(value_counts_with_condition)\n"
    ]
   },
   {
@@ -649,7 +654,7 @@
    "outputs": [],
    "source": [
     "# Convert categorical data to numeric with `pd.get_dummies`\n",
-    "#  YOUR CODE GOES HERE"
+    "df_encoded = pd.get_dummies(application_df, )"
    ]
   },
   {
